[package]
name = "A-Level-NEA"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binary-tree = { path = "./binary-tree" }
level-geometry = { path = "./level-geometry" }

[workspace]
members = [
    "binary-tree",
    "level-geometry"
]
