[package]
name = "A-Level-NEA"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binary-tree = { path = "./binary-tree" }
level-geometry = { path = "./level-geometry" }
textures = { path = "./textures" }

[workspace]
members = [
    "binary-tree",
    "level-geometry",
    "textures"
]
